--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/index.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,11 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.16.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "typescript": "^5.8.3",
-    "v0-sdk": "^0.4.1"
+    "v0-sdk": "^0.4.1",
+    "zod": "^3.25.76"
   }
 }
