--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx @modelcontextprotocol/inspector node dist/index.js",
+    "test": "npm run build && jest",
+    "test:watch": "npm run build && jest --watch",
+    "test:coverage": "npm run build && jest --coverage",
+    "test:mcp": "npm run build && npx mcp-jest node dist/index.js",
+    "test:mcp-config": "npm run build && npx mcp-jest mcp-test-config.json",
+    "test:mcp-tools": "npm run build && npx mcp-jest node dist/index.js --tools generate-component,apply-component,list-project-files,read-file",
+    "test:mcp-comprehensive": "npm run build && node tests/comprehensive-test.mjs",
+    "test:mcp-shell": "chmod +x tests/run-mcp-tests.sh && ./tests/run-mcp-tests.sh",
+    "test:all": "npm run test:mcp-shell && npm run test"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +29,12 @@
     "typescript": "^5.8.3",
     "v0-sdk": "^0.4.1",
     "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "@jest/globals": "^30.0.5",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.0.5",
+    "mcp-jest": "^1.0.12",
+    "ts-jest": "^29.4.0"
   }
 }
