--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "mcp-v0-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
+  "author": "zudsniper",
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
