--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "tsc && echo '#!/usr/bin/env node\n' | cat - dist/index.js > temp && mv temp dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "mcp-v0-server": "./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -22,3 +25,5 @@
     "zod": "^3.25.76"
   }
 }
+
+
