--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "mcp-v0-server",
-  "version": "1.1.5",
-  "main": "src/index.js",
+  "name": "mcp-v0",
+  "version": "1.3.0",
+  "type": "module",
+  "main": "dist/index.js",
   "author": "zudsniper",
   "scripts": {
-    "start": "node src/index.js",
+    "build": "tsc && chmod +x dist/index.js",
+    "start": "node dist/index.js",
+    "dev": "tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "mcp-v0-server": "./src/index.js"
+    "mcp-v0": "./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +29,8 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "dotenv-cli": "^7.4.2"
+    "dotenv-cli": "^7.4.2",
+    "tsx": "^4.19.2"
   }
 }
 
