--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "mcp-v0-server",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "1.0.1",
+  "main": "dist/index.js",
+  "bin": {
+    "mcp-v0-server": "dist/index.js"
+  },
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
